Bug 125335 - Bar chart legend items order depends on the legends alignment
Summary: Bar chart legend items order depends on the legends alignment
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: Chart-Legends
  Show dependency treegraph
 
Reported: 2019-05-17 09:27 UTC by NISZ LibreOffice Team
Modified: 2019-05-22 06:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Calc (29.61 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-05-17 09:28 UTC, NISZ LibreOffice Team
Details
A screenshot showcasing the issue. (96.00 KB, image/png)
2019-05-17 09:29 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-05-17 09:27:58 UTC
Description:
Items in the bar chart legend follow the display order of the drawn data rows in case of left and right orientation, but they don’t in case of top or bottom.

Steps to Reproduce:
1.	Open attachment with 4 bar charts
2.	They have the same data, but different orientations for the legend
3.	To set a different orientation, right click on it and choose Format Legend, go to Position tab and select a Position.


Actual Results:
The legends aligned left or right have the order of 1 – 2 while the top and bottom aligned ones have the order of 2 – 1.

Expected Results:
All legends should display items in the drawing order regardless of their alignment.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-05-17 09:28:37 UTC
Created attachment 151480 [details]
Example file from Calc
Comment 2 NISZ LibreOffice Team 2019-05-17 09:29:23 UTC
Created attachment 151481 [details]
A screenshot showcasing the issue.
Comment 3 Balázs Varga 2019-05-20 09:27:30 UTC
Confirmed with:

Version: 6.3.0.0.alpha1+ (x64)
Build ID: dc17f247daeb281dda531ff335873d563db5b653
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win;
Comment 4 Commit Notification 2019-05-22 06:10:40 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/729c8d135b6b958e6d2cd87ee72166ecdb0afbfc%5E%21

tdf#125335 fix order of bar chart legend names in top-bottom positions

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.