tdf#125335 Chart: fix order of legend names

Respecting the axis direction in case of Bar Chart
and the legend names will be in the right order, on
the bottom/top position too.
Legend names order in left/right position was fixed in:
40144617ce05d7eff86eeb8a412c6991fe0b819e commit.

Change-Id: Id5bd585a666c3bcf346af5317e9197e6460f932a